--- a/RGLMS-main/server/.env.production
+++ b/RGLMS-main/server/.env.production
@@ -1,13 +1,14 @@
-# Production Environment Variables for LMS-TRIAL Backend
+# Production Environment Variables for LMS Backend
 NODE_ENV=production
 PORT=5000
-MONGODB_URI=mongodb+srv://rglms10:RGLMS123@lmsdatabase.jo25hav.mongodb.net/LMSdata+
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-please-make-it-long-and-random
+MONGODB_URI=mongodb+srv://rglms10:RGLMS123@lmsdatabase.jo25hav.mongodb.net/deploylms
+JWT_SECRET=LMSSECRETKEY
 JWT_EXPIRE=30d
 CORS_ORIGIN=http://100.24.13.0
+ALLOWED_ORIGINS=http://100.24.13.0,https://100.24.13.0,http://100.24.13.0:80,http://100.24.13.0:3000,http://100.24.13.0:5000
 
 # Server Configuration
 HOST=0.0.0.0
-ALLOWED_ORIGINS=http://100.24.13.0,http://100.24.13.0:3000,http://100.24.13.0:5000
+ALLOWED_ORIGINS=http://16.171.146.116,http://16.171.146.116:3000,http://16.171.146.116:5000
 
 
