--- a/client/package.json
+++ b/client/package.json
@@ -1,34 +1,50 @@
 {
-  "name": "lms-system",
-  "version": "1.0.0",
-  "description": "Lead Management System - Full Stack Application",
-  "main": "server/server.js",
-  "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm run dev",
-    "client": "cd client && npm start",
-    "build": "cd client && npm run build",
-    "install-server": "cd server && npm install",
-    "install-client": "cd client && npm install",
-    "install-all": "npm run install-server && npm run install-client",
-    "seed": "cd server && npm run seed",
-    "start": "cd server && npm start"
-  },
-  "keywords": [
-    "lead-management",
-    "crm",
-    "react",
-    "nodejs",
-    "mongodb",
-    "jwt",
-    "socket.io"
-  ],
-  "author": "LMS Development Team",
-  "license": "MIT",
-  "devDependencies": {
-    "concurrently": "^8.2.0"
-  },
+  "name": "lms-client",
+  "version": "0.1.0",
+  "description": "Lead Management System Frontend",
+  "private": true,
   "dependencies": {
-    "axios": "^1.11.0"
-  }
+    "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.274.0",
+    "moment-timezone": "^0.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "recharts": "^3.1.2",
+    "socket.io-client": "^4.7.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "build:prod": "NODE_ENV=production react-scripts build",
+    "serve": "serve -s build -l 3000",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
+  },
+  "proxy": "http://localhost:5000"
 }
