--- a/server/.env.example
+++ b/server/.env.example
@@ -18,3 +18,8 @@ RATE_LIMIT_MAX=100
 
 # Timezone
 TZ=America/New_York
+
+# GTI Integration
+GTI_POSTBACK_URL=https://global-telecom-investors.trackdrive.com/api/v1/calls/update_call
+GTI_AUTH_HEADER=Basic replace-with-token
+GTI_TTL_DAYS=30
